--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- <script src="index.js"></script> -->
 <body>
     <div class="container">
-        <img src="./img/background.png" alt="Snow" width="1024" height="576">
+        <img src="./Img/background.png" alt="Snow" width="1024" height="576">
         <div class="text-container">
             <p size="+100">Guitar Fight</p>
             <ul class="navbar__menu"></ul>
