--- a/game.html
+++ b/game.html
@@ -33,8 +33,8 @@
                 width: 100%;
                 align-items: center;
                 padding: 20px">
-                <p><span style="font-size:200%;color:red;">&hearts;</span></p> 
-                <p><span style="font-size:200%;color:red;">&hearts;</span></p> 
+                <p><span style="font-size:200%;color:white;">&hearts;</span></p> 
+                <p><span style="font-size:200%;color:white;">&hearts;</span></p> 
                 <!--player 1 health -->
                 <div style="position: relative; height: 20px; width: 100%; display: flex; justify-content: flex-end;">
                     <!--missing health-->
