--- a/game.html
+++ b/game.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="game.css">
         
         <!--padding doesnt push divs out-->
         <style>
@@ -18,7 +20,8 @@
     <body> 
 
         <div style = "text-align: center;margin-top: 70px;" >
-            <p>Fight!</p>
+            <p></p>
+            <p><span style="font-size:100%;color:white;">Fight!</span></p>
         </div>
 
         <div style=" display: flex; justify-content: center; align-items: center;">
