--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guitar Fight</title>
+    <title>Musica Fight</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <head>
@@ -24,14 +24,14 @@
     <div class="container">
         <img src="./Img/background.png" alt="Snow" width="1024" height="576">
         <div class="text-container">
-            <p size="+100">Guitar Fight</p>
+            <p size="+100">Musica Fight</p>
             <ul class="navbar__menu"></ul>
                 <li class="navbar__item">
                     <a href="game.html" class="navbar__links" target="_blank">PLAY</a>
 
                 </li>
                 <li class="navbar__item">
-                    <a href="settings.html" class="navbar__links" target="_blank">INSTRUCTIONS</a>
+                    <a href="instructions.html" class="navbar__links" target="_blank">INSTRUCTIONS</a>
 
                 </li>
                 <li class="navbar__item">
